src/objects/GCRChannelContent__c.object
<CustomObject>
    <description>Channel content data based on brand/country/language</description>
    <fields>
        <fullName>AddProductLimit__c</fullName>
        <description>Count of product search results shown in the page</description>
        <label>Add Product Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AddSelectionMessage__c</fullName>
        <description>Error message on no address selection</description>
        <label>Address Selection Error Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressFieldSet__c</fullName>
        <description>Field to hold name of the field set to identify the sequence of the fields on email us page</description>
        <label>Address Field Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressOverrideReason__c</fullName>
        <description>Address override reason</description>
        <label>Address Override Reason</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentBusyMsg__c</fullName>
        <label>Chat Agent Busy Message</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentConnectingMessage__c</fullName>
        <description>Field to hold connect agent message</description>
        <label>Agent Connecting Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentTypingLabel__c</fullName>
        <description>Field to hold message displayed when agent is typing</description>
        <label>Agent Typing Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleFeedbackLabel__c</fullName>
        <description>Label for Article feedback buttons</description>
        <label>Article Feedback Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleNotHelpfulLabel__c</fullName>
        <label>Article Not Helpful Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticlePostFBMsg__c</fullName>
        <label>Article Post Feedback Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachedFilesLabel__c</fullName>
        <label>Attached Files Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentLimitMessage__c</fullName>
        <label>Attachment Limit Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttachmentLimit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attachment Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCL__c</fullName>
        <formula>CareHub__r.Brand__c + &apos; - &apos; +  CareHub__r.CountryIsoCode__c + &apos; - &apos; +  CareHub__r.LanguageIsoCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Country Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackBtnLabel__c</fullName>
        <description>Contains label for Back Button for Email Us address confirmaton</description>
        <label>Back Button Label</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackToFeaturedLabel__c</fullName>
        <label>Back to Featured Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackToSearchLabel__c</fullName>
        <label>Back to Search Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandImg__c</fullName>
        <description>Field to hold url for brand image</description>
        <label>Brand Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BrandPColor__c</fullName>
        <description>Field to hold brand primary color which derive background color for chat window</description>
        <label>Brand Primary Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandSColor__c</fullName>
        <description>Field to hold brand secondary color which derive inverse color like text, buttons etc for chat window</description>
        <label>Brand Secondary Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CareHub__c</fullName>
        <label>Care Hub</label>
        <referenceTo>GCRCareHub__c</referenceTo>
        <relationshipLabel>Care Hub Channel Contents</relationshipLabel>
        <relationshipName>GCRChannelContent</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ChannelHeader__c</fullName>
        <label>Channel Header</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatEndAgentLabel__c</fullName>
        <description>Field to hold message displayed when chat ended by Agent</description>
        <label>Chat Ended by Agent Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatEndVisitorLabel__c</fullName>
        <description>Field to hold message displayed when chat ended by visitor</description>
        <label>Chat Ended by Visitor Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatImageUrl__c</fullName>
        <description>Chat image url for Proactive Chat required to be sent to brand.com</description>
        <label>Proactive Chat Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ChatInactiveBtnLabel__c</fullName>
        <label>Chat Inactive Button Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatTransferredLabel__c</fullName>
        <description>Field to hold the message displayed when chat is transferred to different agent</description>
        <label>Chat Transferred Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatbot_Account_Id__c</fullName>
        <label>Chatbot Account Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatbot_Out_of_Hours_Handoff_Message__c</fullName>
        <description>This field is used to display the information to the visitor to fill in the PII form when the chat bot is handed over to the visitor</description>
        <label>Chatbot Out of Hours Handoff Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChooseFileLabel__c</fullName>
        <description>Field to hold label for choose file text of visitor chat window</description>
        <label>Choose File Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityUrl__c</fullName>
        <description>This field contains get satisfaction community url</description>
        <label>Community Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ConnectChatMsg__c</fullName>
        <description>Field to hold message/translations to be displayed to the user while connecting chat</description>
        <label>Connect Chat Message</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContinueBtnLabel__c</fullName>
        <description>Contains continue button label for address verification in email us form</description>
        <label>Continue Button Label</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country picklist from Global Picklist to fetch global picklist values</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CrmLabel__c</fullName>
        <label>CRM Checkbox Label</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateFormatError__c</fullName>
        <description>Error message for data format</description>
        <label>Error Message Date Format</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default channel for country/brand/language</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayName__c</fullName>
        <description>Display name for the channel same could vary based on country and name</description>
        <inlineHelpText>Please enter channel display name based on language and country</inlineHelpText>
        <label>Display Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <description>Order on which icons should be shown on sidebar widget for selected brand, country and language</description>
        <label>Display Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DragFileLabel__c</fullName>
        <description>Filed to hold label to drag file on the area</description>
        <label>Drag File Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DropFileLabel__c</fullName>
        <description>Field to hold drop file label which will be shown to end user on attachment request and user try to drop a file in drag/drop area.</description>
        <label>Drop File Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAddLine1Label__c</fullName>
        <label>AddressLine 1 Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAddLine2Label__c</fullName>
        <label>AddressLine 2 Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAdditionalDetails__c</fullName>
        <label>Email Additional Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAttachButtonLabel__c</fullName>
        <label>Email Button Attach File Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailBtnSendEmail__c</fullName>
        <label>Email Button Send Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailCityLabel__c</fullName>
        <label>City/Town Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailCountryLabel__c</fullName>
        <label>Email Country Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailCountyLabel__c</fullName>
        <label>State/County Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailDescLabel__c</fullName>
        <label>Email Description Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailExpDateLabel__c</fullName>
        <label>Email Prod Expiration Date Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailFNLabel__c</fullName>
        <label>Email First Name Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailIncorrectMessage__c</fullName>
        <description>Contains error message if email format is inorrect</description>
        <label>Email Format Incorrect Message</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailInvalidMessage__c</fullName>
        <label>Email Invalid Message</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailLNLabel__c</fullName>
        <label>Email Last Name Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailLabel__c</fullName>
        <label>Email Label</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailPhoneLabel__c</fullName>
        <label>Phone Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailProdCodeLabel__c</fullName>
        <label>Email Production Code Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailProdSearchLabel__c</fullName>
        <label>Email Product Search Label</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailProdUsedLabel__c</fullName>
        <label>Email Product Used Before Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailProductQuantities__c</fullName>
        <description>Contains text to be appended with case summary with selected product quantities from email us form</description>
        <label>Email Product Quantities</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailReason1__c</fullName>
        <label>Email Reason 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailReason2__c</fullName>
        <label>Email Reason 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailReason3__c</fullName>
        <label>Email Reason 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailReasonLabel__c</fullName>
        <label>Email Reason Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailShowProdSearch__c</fullName>
        <label>Email Show Product Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailStillProdLabel__c</fullName>
        <label>Email Still Have Prod Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailThankyouMsg__c</fullName>
        <description>Thank you message after sending email</description>
        <label>Email Thank you Message</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EmailWTBSearchHelp__c</fullName>
        <label>Email WTB Search Help</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailWtbDescLabel__c</fullName>
        <label>Email WTB Description Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailZipLabel__c</fullName>
        <label>Zip Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndChatAcceptBtnLabel__c</fullName>
        <description>Field to hold label for button to confirm end chat</description>
        <label>End Chat Accept Button Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndChatBtnLabel__c</fullName>
        <description>Field to hold button label of end chat</description>
        <label>End Chat Button Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndChatConfMsg__c</fullName>
        <description>Field to hold label on the confirmation to end chat</description>
        <label>End Chat Confirmation Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndChatRejectBtnLabel__c</fullName>
        <description>Field to hold cancel end chat action and continue to chat</description>
        <label>End Chat Reject Button Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnteredAddLabel__c</fullName>
        <label>Entered Address Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQArticleSearchLabel__c</fullName>
        <label>FAQ Article Search Label</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQFeaturedArticle1__c</fullName>
        <label>Featured Article 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQFeaturedArticle2__c</fullName>
        <label>Featured Article 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQFeaturedArticle3__c</fullName>
        <label>Featured Article 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQHeaderFeatured__c</fullName>
        <label>FAQ Header Featured</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQHeaderSearch__c</fullName>
        <label>FAQ Header Search Result</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileCancelledMsg__c</fullName>
        <description>Field to hold message to be displayed when file transfer is cancelled by the agent</description>
        <label>File Transfer Cancelled Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileFailedMsg__c</fullName>
        <description>Field to hold message to be displayed when file transfer fails during chat for some reason</description>
        <label>File Transfer Fail Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileLimitMessage__c</fullName>
        <label>File Size Limit Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileSuccessMsg__c</fullName>
        <description>Field to hold message to be displayed when file transfer succeed during chat for some reason</description>
        <label>File Transfer Success Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCRChatBtnLabel__c</fullName>
        <label>Chat Active Button Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCRChatDescLabel__c</fullName>
        <label>Chat Description Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCRChatEmailLabel__c</fullName>
        <label>Chat Email Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCRChatFNLabel__c</fullName>
        <label>Chat First Name Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCRChatHeaderLabel__c</fullName>
        <label>Chat Header Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCRChatLNLabel__c</fullName>
        <label>Chat Last Name Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCRPrivacyPolicyLabel__c</fullName>
        <formula>CareHub__r.PrivacyPolicyLabel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Privacy Policy Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GreetMsg__c</fullName>
        <description>Field to hold Greeting Message on chat window</description>
        <label>Greeting Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Chatbot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Chatbot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImageField__c</fullName>
        <defaultValue>&apos;Image_Url_Thumb__c&apos;</defaultValue>
        <description>Field name of product image in Local Product object - Only for System Admins</description>
        <label>Product Search Image Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvalidAttachmentExtn__c</fullName>
        <description>Invalid attachment extensions comma seperated</description>
        <inlineHelpText>Add comma seperated file extensions which are not allowed to upload</inlineHelpText>
        <label>Valid Attachment Extensions</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvalidAttachmentMessage__c</fullName>
        <label>Invalid Attachment Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAButtonId__c</fullName>
        <label>Live Agent Button Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LADeploymentId__c</fullName>
        <label>Live Agent Deployment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveAgentBusinessHour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Agent Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>GCRChannelContents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumberOfProdLabel__c</fullName>
        <label>Number of Product Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberProdCount__c</fullName>
        <label>Number of Product Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutsideBusinessHoursMsg__c</fullName>
        <label>Outside Business Hour Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageMessage__c</fullName>
        <description>Field to hold message displayed on answers channel.</description>
        <label>Page Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PiTranslationNo__c</fullName>
        <label>Picklist Translation No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PiiSubmitBtnLabel__c</fullName>
        <description>Field to hold pii submit button label</description>
        <label>Pii Submit Button Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PiiSubmitFailMsg__c</fullName>
        <description>Field holds message which got displayed when there is a system error while submitting PII</description>
        <label>Pii Submit Failure Messae</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PiiSubmitSuccessMsg__c</fullName>
        <description>Field to hold success message when pii submitted</description>
        <label>Pii Submission Success Msessage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlTranslationYes__c</fullName>
        <label>Picklist Translation Yes</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLimitMessage__c</fullName>
        <label>Add Product Limit Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromotionCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Promotion Question Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PromotionLabel__c</fullName>
        <label>Promotion Checkbox Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchResultMessage__c</fullName>
        <label>Search Result Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectAddText__c</fullName>
        <description>Contains header text for address selection page in email us form</description>
        <label>Select Address Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectedProductLabel__c</fullName>
        <label>Selected Product Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpeechBubbleBgColorAgent__c</fullName>
        <defaultValue>&apos;#FFFFFF&apos;</defaultValue>
        <description>Filed to hold background color for speech bubble.</description>
        <label>Speech Bubble Background Color Agent</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpeechBubbleBgColorClient__c</fullName>
        <defaultValue>&apos;#FFFFFF&apos;</defaultValue>
        <description>Filed to hold background color for speech bubble of visitor</description>
        <label>Speech Bubble Background Color Client</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpeechBubbleTxtColorAgent__c</fullName>
        <defaultValue>&apos;#FFFFFF&apos;</defaultValue>
        <description>Field to hold text color of agent&apos;s speech bubble</description>
        <label>Speech Bubble Text Color Agent</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpeechBubbleTxtColorClient__c</fullName>
        <defaultValue>&apos;#FFFFFF&apos;</defaultValue>
        <description>Filed to hold text color for client&apos;s speech bubble</description>
        <label>Speech Bubble Text Color Client</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprinklr_Community_ID__c</fullName>
        <description>This ID is to be used for the Sprinklr Widget Community Content Channel</description>
        <label>Sprinklr Community ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StandaloneChatUrl__c</fullName>
        <formula>IF(AND(!ISBLANK(LAButtonId__c), !ISBLANK(LADeploymentId__c)),$Setup.ContactUsURL__c.CareHubUrl__c + &apos;/gcr_proChatRedirect?brand=&apos; +  CareHub__r.Brand__c + &apos;&amp;country=&apos; +  CareHub__r.CountryIsoCode__c + &apos;&amp;language=&apos; +  CareHub__r.LanguageIsoCode__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standalone Chat Page Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuggestedAddLabel__c</fullName>
        <description>Contains value of suggested address</description>
        <label>Suggested Address Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeoutVisitorLabel__c</fullName>
        <description>Field to hold message, displayed when visitor chat window times out</description>
        <label>Timeout Visitor Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranscriptEmailLabel__c</fullName>
        <description>Filed to hold label for the checkbox to email transcript to end user. Custom chat page</description>
        <label>Email Transcript Select Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TranscriptEmailSubject__c</fullName>
        <description>Field to hold subject line of the email sent to the customer</description>
        <label>Transcript Email Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UploadProgressMsg__c</fullName>
        <description>Filed to hold upload progress message</description>
        <label>Upload Progress Messgae</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitorLabel__c</fullName>
        <description>Field to hold visitor name on the chat window</description>
        <label>Visitor Label</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crmChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>crmChecked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field defines current active channels</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCrmRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is CRM Checkbox Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSmartCare__c</fullName>
        <formula>CareHub__r.BrandCountryLanguage__r.Supports_SmartCare__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Smart Care Supported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noPrechatProactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to determine pre chat form requirement for proactive chat</description>
        <label>noPrechatProactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noPrechatStandalone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to determine if pre chat form is required for standalone chat page</description>
        <label>noPrechatStandalone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>noPrechat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>noPrechat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>promotionalChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>promotionalChecked</label>
        <type>Checkbox</type>
    </fields>
    <label>Care Hub Channel Content</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Country__c</columns>
        <columns>BCL__c</columns>
        <columns>CareHub__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Chat</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>AgentTypingLabel__c</columns>
        <columns>Country__c</columns>
        <columns>BCL__c</columns>
        <columns>CareHub__c</columns>
        <columns>isActive__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EmailAddLine1Label__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>GCRChannelContent__c.chat</value>
        </filters>
        <label>Chat</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>China_FAQ</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Country__c</columns>
        <columns>BCL__c</columns>
        <columns>CareHub__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>GCRChannelContent__c.faq</value>
        </filters>
        <filters>
            <field>BCL__c</field>
            <operation>contains</operation>
            <value>cn - zh</value>
        </filters>
        <label>China FAQ</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Japan</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Country__c</columns>
        <columns>BCL__c</columns>
        <columns>CareHub__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <label>Japan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PHC_chat</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Country__c</columns>
        <columns>BCL__c</columns>
        <columns>CareHub__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>GCRChannelContent__c.chat</value>
        </filters>
        <label>PHC chat</label>
        <language>en_US</language>
    </listViews>
</CustomObject>